src/tests/fixtures/resolver_context/ContextValueMissingTypeAnnotation.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(args: unknown, ctx): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueMissingTypeAnnotation.invalid.ts:4:27 - error: Expected context parameter to have an explicit type annotation. Grats validates that your context parameter is type-safe by checking that all context values reference the same type declaration.

4   greeting(args: unknown, ctx): string {
                            ~~~
